# chess-engine

./: .gitignore  AttackValidator.cpp  AttackValidator.h  CMakeLists.txt  CastlingValidator.cpp  CastlingValidator.h  ChessBoard.cpp  ChessBoard.h  Enums.cpp  Enums.h  GameManager.cpp  GameManager.h  KingValidator.cpp  KingValidator.h  MoveHistory.cpp  MoveHistory.h  MoveValidator.cpp  MoveValidator.h  MovementPatterns.cpp  MovementPatterns.h  PathValidator.cpp  PathValidator.h  PawnValidator.cpp  PawnValidator.h  PieceOwnership.cpp  PieceOwnership.h  README.md  RayTable.cpp  RayTable.h  Structs.cpp  Structs.h  Utils.cpp  Utils.h  main.cpp
